# XrayCNNClassifier

./: LICENSE  pyproject.toml  setup.py  template.py
